; Author: Dominik Harmim <iharmim@fit.vut.cz>

(library
 (name Atomicity)
 (public_name infer.Atomicity)
 (flags
  (:standard
   -open
   Core
   -open
   IR
   -open
   IStdlib
   -open
   IStd
   -open
   ATDGenerated
   -open
   IBase
   -open
   Absint))
 (libraries core ppx_show.runtime IStdlib ATDGenerated IBase IR Absint)
 (preprocess
  (pps ppx_compare ppx_show)))
